--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "description": "A high-level browser automation library.",
   "dependencies": {
+    "bluebird": "^3.3.5",
     "debug": "^2.2.0",
     "deep-defaults": "^1.0.3",
     "defaults": "^1.0.2",
